@@ -85,7 +85,7 @@ public class DeadLetterPublishingRecovererFactory {
 
 		recoverer.setHeadersFunction((consumerRecord, e) -> addHeaders(consumerRecord, e, getAttempts(consumerRecord)));
 		recoverer.setFailIfSendResultIsError(true);
-		recoverer.setReplaceOriginalHeaders(false);
+		recoverer.setAppendOriginalHeaders(false);
 		recoverer.setThrowIfNoDestinationReturned(false);
 		this.recovererCustomizer.accept(recoverer);
 		return recoverer;
